# lnd-startos

./: .gitignore  .npmrc  Dockerfile  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: buildService.yml
Old/: docker_entrypoint.sh  manifest.yaml
Old/actions/: import-mynode.sh  import-raspiblitz.sh  import-umbrel-5.sh  import-umbrel.sh  recreate-macaroons.sh  reset-txs.sh
Old/actions/health-check/: Cargo.toml
Old/actions/health-check/src/: main.rs
Old/assets/compat/: backup-restore.sh
Old/configurator/: Cargo.toml
Old/configurator/src/: .backupignore.template  lnd.conf.template  main.rs
Old/docs/: instructions.md
Old/scripts/: embassy.ts
Old/scripts/models/: setConfig.ts
Old/scripts/services/: dependencies.ts  getConfig.ts  migrations.ts  properties.ts  setConfig.ts
assets/: import-umbrel.sh
docs/: instructions.md
docs/wallet-integrations/: alby-extension.md  bitbanana.md  fully-noded.md  rtl.md  zeus.md
startos/: backups.ts  dependencies.ts  interfaces.ts  main.ts  manifest.ts  sdk.ts  utils.ts
startos/actions/: addBackupTarget.ts  aezeedCipherSeed.ts  confirmPasswordBackup.ts  disableAutoUnlock.ts  importUmbrel.ts  index.ts  manualBackup.ts  nodeInfo.ts  recreate-macaroons.ts  resetTxns.ts  toggleBackupProvider.ts  towerInfo.ts  walletPassword.ts
startos/actions/config/: autopilot.ts  backend.ts  bitcoin.ts  (+7 more)
startos/fileModels/: custom-config.json.ts  lnd.conf.ts  store.json.ts
startos/init/: index.ts  setupCerts.ts  taskSetBackend.ts  watchHosts.ts
startos/install/: versionGraph.ts
(+7 files in other folders)
