[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
name = "configurator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
base64 = "0.13.0"
base32 = "0.4.0"
bitcoincore-rpc = "0.15.0"
der-parser = "5.0.0"
emver = { version = "0.1.0", features = ["serde"] }
hex = "0.4.2"
http = "0.2.1"
nix = "0.19.0"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = [
    "json",
    "blocking",
], default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.13"
x509-parser = "0.9.0"